--- a/module3/7.thiet_ke_bo_cuc_trang_web/baitap/giao_dien_fb/style.css
+++ b/module3/7.thiet_ke_bo_cuc_trang_web/baitap/giao_dien_fb/style.css
@@ -14,33 +14,37 @@ header {
     height: 56px;
 }
 section.leftPanel {
-    position: relative;
+    background-color: black;
+    color: white;
+    font-size: 18px;
+    position: fixed;
     float: left;
-    top: 56px;
-    display: inline-block;
-    background-color: palevioletred;
-    width: 25%;
-    height: 100%;
+    display: block;
+    width: 20%;
+    height: 670px;
     overflow: scroll;
 }
 section.rightPanel{
-    z-index: 0;
-    position: relative;
-    float: left;
+    background-color: black;
+    color: white;
+    font-size: 18px;
+    position: fixed;
+    right: 0;
     top: 56px;
+    float: right;
     display: inline-block;
-    background-color: palevioletred;
-    width: 25%;
-    height: 100%;
+    width: 20%;
+    height: 670px;
     overflow: scroll;
 }
 main{
     position: relative;
-    float: left;
+    left: 273px;
     top: 56px;
     display: inline-block;
-    background-color: bisque;
-    width: 50%;
+    background-color:black;
+    color: white;
+    width: 60%;
     height: 100%;
 }
 header div.logo {
@@ -49,6 +53,19 @@ header div.logo {
     top: 25%;
     bottom: 25%;
 }
+header .nav-search,
+header .nav-search input{
+    display: inline-block;
+    position: relative;
+    width: 592px;
+    height: 30px;
+    border-radius: 5px;
+
+}
+header .nav-search {
+    margin-left: 240px;
+}
+
 header div.notification {
     display: inline-block;
     float: right;
@@ -58,7 +75,7 @@ header div.notification {
 div ul li {
     display: inline-block;
 }
-div ul li:hover {
+div ul li img:hover {
    opacity: 0.7;
 }
 div ul ul {
@@ -77,7 +94,77 @@ div ul ul li {
 background-color: darkgray;
     visibility: hidden;
 }
-div ul li:hover ul li{
+div ul li img:hover + ul li{
     visibility: visible;
 
+}
+.leftPanel .category1 ul{
+    height: 277px;
+    border-bottom: 1px solid darkgray;
+}
+
+.leftPanel .category1 li,
+.leftPanel .category2 li,
+.leftPanel .category3 li{
+    display: block;
+    width: 100%;
+    border-radius: 10px;
+    padding: 15px 0;
+    left: 10px;
+}
+.leftPanel .category1 li {
+    height: 16.67%;
+}
+.rightPanel div ul li:hover,
+.leftPanel div ul li:hover {
+    border: 1px solid darkgray;
+    background-color: rgb(176,179,184);
+    opacity: 1;
+}
+
+.leftPanel .category2 ul{
+    height: 200px;
+    border-bottom: 1px solid darkgray;
+}
+.leftPanel .category2 li{
+    height: 25%;
+}
+.rightPanel div {
+   margin-left: 10px;
+}
+
+.rightPanel div li {
+    display: block;
+    width: 100%;
+    border-radius: 10px;
+}
+.rightPanel .advertisement {
+    height: 255px;
+}
+.rightPanel .advertisement p {
+    margin: 5px 0;
+}
+.rightPanel .advertisement ul {
+    height: 90%;
+}
+.rightPanel .advertisement li {
+    height: 50%;
+}
+.rightPanel .activeUser ul {
+    margin-top: 10px;
+}
+.rightPanel .activeUser li {
+    height: 35px;
+}
+
+main article {
+    margin: 0 auto;
+    width: 90%;
+background-color:  rgb(24,25,26);
+    border-radius: 5px;
+}
+main article img,
+main article section  {
+
+    margin: 8px 15px;
 }
