--- a/module3/7.thiet_ke_bo_cuc_trang_web/baitap/layout_don_gian/resources/style.css
+++ b/module3/7.thiet_ke_bo_cuc_trang_web/baitap/layout_don_gian/resources/style.css
@@ -5,103 +5,101 @@
     padding: 0;
 }
 
+/*chỉnh header và nav*/
+@media only screen and (max-width: 600px){
+div.logo {
+    visibility: hidden;
+    position: absolute;
+}
+}
 header{
     background-color: rgb(4,5,9);
     color: rgb(255, 255, 255);
     height: 94px;
-}
-div.navBar{
-    position: relative;
-}
-header div,
-header ul{
-    display: inline-block;
-    height: 100%;
-}
-header div.navBar li a {
-    position: relative;
-    display: block;
-    top: 30px;
-    width: 120px;
-    text-align: center;
-    line-height: 30px;
+    display: flex;
 
 }
-header li {
-    position: relative;
-    height: 100%;
-    display: block;
-    float: left;
-    list-style: none;
+div.logo {
+    display: inline-flex;
 }
+div.logo a {
+    display: flex;
+}
+div.logo img{
+    height: 99%;
+    flex-basis: 140px;
+}
+div.navBar {
+    display: inline-flex;
+    width: 800px;
+}
+div.navBar ul{
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-shrink: 1;
+}
+div.navBar ul li {
+    display: flex;
+    padding: 35px;
+}
+
 .navBar li:hover {
     background-color: rgb(220, 220, 220);
     color: rgb(0, 0, 0);
     font-size: 25px; 
 }
 
-div.logo img{
-    height: 100%;
-    width: 140px;
-}
 
+div.middle {
+    display: flex;
+}
 main {
     height:615px;
+}
+
+main div.content{
+    width: 59%;
+    display: flex;
 }
 
 main div.link,
 main div.content,
 main div.advertisement {
-    position: absolute;
-
-    display: inline-block;
-    height: 10px;
+display: inline-flex;
     text-align: center;
-    
+    flex-direction: column;
+    align-items: center;
 }
 
-main div.content{
-    width: 59%;
 
-}
+
 main div.link,
 main div.advertisement{
     width: 20%;
     background-color: rgb(245, 245, 245);
     height: 615px;
-    
-
+    flex-shrink: 1;
 }
 
-main div.link {
-    display: block;
-}
+
 main div.content{
-    display: block;
-    left: 275px;
+flex-shrink: 2;
+    width: 59%;
     text-align: justify;
-    padding-left: 20px;
     text-indent: 30px;
 }
-main div.content h3 {
-    margin: 10px 0;
-}
+
 main div.content p {
     width: 90%;
     
 }
-main div.advertisement {
-    display: block;
-    right: 0;
-}
 
-main div a {
-    display: block;
-}
 
 footer div {
     background-color: rgb(4,5,9);
     color: rgb(255, 255, 255);
-    position: relative;
     height: 70px;
 }
