--- a/module3/7.thiet_ke_bo_cuc_trang_web/baitap/web_hoat_hinh/resources/css/style.css
+++ b/module3/7.thiet_ke_bo_cuc_trang_web/baitap/web_hoat_hinh/resources/css/style.css
@@ -25,6 +25,7 @@ nav ul li {
 }
 a {
     text-decoration: none;
+
 }
 main {
     width: 100%;
@@ -57,11 +58,13 @@ main section.mainPanel {
 .leftPanel .video a {
     position: relative;
    margin: auto;
+   text-align: center;
 
 }
 .leftPanel .video img {
     width: 90%;
     height: 70%;
+    text-align: center;
 }
 
 .mainVideo video {
