picture of the day added

--- a/module4/5.ORM/baitap/music_image/src/main/webapp/WEB-INF/views/welcome.html
+++ b/module4/5.ORM/baitap/music_image/src/main/webapp/WEB-INF/views/welcome.html
@@ -7,5 +7,6 @@
 <body>
 <h1>Ung dung nghe nhac va hinh anh</h1>
 <a href="music">Nghe nhac</a>
+<a href="picture">Buc anh cua ngay</a>
 </body>
 </html>
