exercise and practice ss5,6,7

--- a/module5/ss5_interaction/angular-interaction/src/app/angular-name-card/name-card/name-card.component.html
+++ b/module5/ss5_interaction/angular-interaction/src/app/angular-name-card/name-card/name-card.component.html
@@ -14,5 +14,18 @@
       </div>
     </div>
   </div>
-
+<div class="row">
+  <div class="col">
+    <h3>Change name card</h3>
+    <form (ngSubmit)="changeNameCard(form)" #form="ngForm" >
+      <label>Name:</label>
+      <input type="text" ngModel name="nameCard" >
+      <label>Phone:</label>
+      <input type="text" ngModel name="phone">
+      <label ngModel>Email:</label>
+      <input type="text"  ngModel name="email">
+      <input type="submit">
+    </form>
+  </div>
+</div>
 </div>
