--- a/module5/ss5_interaction/angular-interaction/src/app/app.component.html
+++ b/module5/ss5_interaction/angular-interaction/src/app/app.component.html
@@ -2,3 +2,6 @@
 <app-angular-process-bar></app-angular-process-bar>
 <app-angular-rating></app-angular-rating>
 <app-angular-countdown-timer></app-angular-countdown-timer>
+<app-angular-to-do-app></app-angular-to-do-app>
+<app-angular-register-form></app-angular-register-form>
+<app-angular-login></app-angular-login>
