--- a/module5/ss5_interaction/angular-interaction/src/app/angular-name-card/angular-name-card.component.html
+++ b/module5/ss5_interaction/angular-interaction/src/app/angular-name-card/angular-name-card.component.html
@@ -1,2 +1,1 @@
-<p>angular-name-card works!</p>
-<app-name-card nameCard="TRAN XUAN MANH" email="abc@codegym.com.vn" phone="0999999999"></app-name-card>
+<app-name-card></app-name-card>
