ss7 product manager

--- a/module5/ss7-angular-service-router/src/app/product-manager/product/product-detail/product-detail.component.html
+++ b/module5/ss7-angular-service-router/src/app/product-manager/product/product-detail/product-detail.component.html
@@ -30,7 +30,7 @@
       <button [routerLink]="['/product-manager/edit',product.id]">Edit</button>
     </div>
     <div class="col">
-      <button>Delete</button>
+      <button (click)="delete(product.id)">Delete</button>
     </div>
   </div>
 </div>
