--- a/module5/ss7-angular-service-router/src/app/app.component.html
+++ b/module5/ss7-angular-service-router/src/app/app.component.html
@@ -2,5 +2,6 @@
   <button class="nav-item" routerLink="/timelines">Timeline</button>
   <button class="nav-item" routerLink="/musics">Musics</button>
 <button class="nav-item" routerLink="/product-manager">Product Manager</button>
+<button routerLink="/dictionary">Dictionary</button>
 <h2>--------------------</h2>
 <router-outlet></router-outlet>
