--- a/module5/ss7-angular-service-router/src/app/app.component.html
+++ b/module5/ss7-angular-service-router/src/app/app.component.html
@@ -1,7 +1,8 @@
 <h1>index</h1>
-  <button class="nav-item" routerLink="/timelines">Timeline</button>
-  <button class="nav-item" routerLink="/musics">Musics</button>
+<button class="nav-item" routerLink="/timelines">Timeline</button>
+<button class="nav-item" routerLink="/musics">Musics</button>
 <button class="nav-item" routerLink="/product-manager">Product Manager</button>
 <button routerLink="/dictionary">Dictionary</button>
+<button routerLink="/to-do-list">Todo list</button>
 <h2>--------------------</h2>
 <router-outlet></router-outlet>
