add fake api, change functions to work with it

--- a/module5/ss7-angular-service-router/src/app/product-manager/product/product-create/product-create.component.html
+++ b/module5/ss7-angular-service-router/src/app/product-manager/product/product-create/product-create.component.html
@@ -1,5 +1,5 @@
 
-<form [formGroup]="productForm" (ngSubmit)="save()">
+<form *ngIf="productForm" [formGroup]="productForm" (ngSubmit)="save()">
   <table>
     <tr>
       <td>
@@ -26,8 +26,15 @@
       </td>
     </tr>
     <tr>
+      <td>
+        <label>Category</label>
+        <select formControlName="categoryId">
+          <option *ngFor="let category of categories" value="{{category.id}}">{{category.category}}</option>
+        </select>
+      </td>
+    </tr>
+    <tr>
         <th><button type="submit">Add</button></th>
-
     </tr>
   </table>
 </form>
