--- a/module5/ss7-angular-service-router/src/app/product-manager/product/product-detail/product-detail.component.html
+++ b/module5/ss7-angular-service-router/src/app/product-manager/product/product-detail/product-detail.component.html
@@ -26,6 +26,12 @@
     </div>
   </div>
   <div class="row">
+    <div class="col">Category:</div>
+    <div class="col">
+      {{product.category.category}}
+    </div>
+  </div>
+  <div class="row">
     <div class="col">
       <button [routerLink]="['/product-manager/edit',product.id]">Edit</button>
     </div>
