--- a/module5/ss7-angular-service-router/src/app/product-manager/product/product-edit/product-edit.component.html
+++ b/module5/ss7-angular-service-router/src/app/product-manager/product/product-edit/product-edit.component.html
@@ -26,8 +26,15 @@
       </td>
     </tr>
     <tr>
+      <td>
+        <label>Category</label>
+        <select formControlName="categoryId">
+          <option *ngFor="let category of categories" value="{{category.id}}">{{category.category}}</option>
+        </select>
+      </td>
+    </tr>
+    <tr>
       <th><button type="submit">Add</button></th>
-
     </tr>
   </table>
 </form>
